# midas-journal-322

./: CMakeLists.txt
ActiveContoursWithoutEdges/Algorithms/Dense/: itkDenseMultiphaseLevelSetImageFilter.h  itkDenseMultiphaseLevelSetImageFilter.txx  itkDenseMultiphaseSegmentationLevelSetImageFilter.h  itkDenseMultiphaseSegmentationLevelSetImageFilter.txx
ActiveContoursWithoutEdges/Algorithms/Sparse/: itkSparseMultiphaseLevelSetImageFilter.h  itkSparseMultiphaseLevelSetImageFilter.txx  itkSparseMultiphaseSegmentationLevelSetImageFilter.h  itkSparseMultiphaseSegmentationLevelSetImageFilter.txx
ActiveContoursWithoutEdges/BasicFilters/Dense/: itkMultiphaseDenseSegmentationFiniteDifferenceImageFilter.h  itkMultiphaseDenseSegmentationFiniteDifferenceImageFilter.txx
ActiveContoursWithoutEdges/BasicFilters/Sparse/: itkMultiphaseSparseFieldLevelSetImageFilter.h  itkMultiphaseSparseFieldLevelSetImageFilter.txx  itkMultiphaseSparseFieldLevelSetImageFilter2.txx
ActiveContoursWithoutEdges/Common/: itkMultiphaseFiniteDifferenceImageFilter.h  itkMultiphaseFiniteDifferenceImageFilter.txx  itkVectorShiftScaleImageFilter.h  itkVectorShiftScaleImageFilter.txx
ActiveContoursWithoutEdges/LevelsetFunctions/: itkRegionBasedLevelSetFunction.h  itkRegionBasedLevelSetFunction.txx  itkScalarChanAndVeseLevelSetFunction.h  itkScalarChanAndVeseLevelSetFunction.txx  itkScalarChanAndVeseSharedFunctionData.h  itkScalarLevelSetFunctionBase.h  itkScalarLevelSetFunctionBase.txx
examples/: CMakeLists.txt
examples/ActiveContoursWithoutEdges/: CMakeLists.txt  ScalarMultiPhase2DTest.cxx  ScalarMultiPhase3DTest.cxx  ScalarSinglePhase3DTest.cxx  ScalarSinglePhaseDense2DTest.cxx  ScalarSinglePhaseSparse2DTest.cxx
